--- a/templates/properties-single.html
+++ b/templates/properties-single.html
@@ -14,14 +14,13 @@
         </div>
       </div>
     </section>
-
     <section class="ftco-section ftco-property-details">
       <div class="container">
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="property-details">
       				<div class="img" style="background-image: url({% static 'images/photo_2019-07-25_23-36-06.jpg' %});">
-      					<a href="https://www.youtube.com/watch?v=AVs0_kW6RZg" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
+      					<a href="https://www.youtube.com/watch?v=_ZxLUO9POVglist=RD_ZxLUO9POVg" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 			          	<span class="fa fa-play"></span>
 			          </a>
       				</div>
