--- a/templates/properties.html
+++ b/templates/properties.html
@@ -113,8 +113,12 @@
 						<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 					{% endif %}
 					<div class="rent-sale">
-        				<span class="{% if announcement.type == 'sale' %}sale {% else %}rent{% endif %}">{{ announcement.status }}</span>
-        			</div>
+					{% if announcement.status.id == 1 %}
+        				<span class="sale">{{ announcement.status }}</span>
+        			{% else %}
+						<span class="rent">{{ announcement.status }}</span>
+					{% endif %}
+					</div>
         				<p class="price"><span class="orig-price">{{ announcement.price}}</span></p>
         			</a>
         			<div class="text">
@@ -288,22 +292,31 @@
         		</div>
         	</div> {% endcomment %}
         </div>
+		{% if announcements.has_other_pages %}
         <div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
               <ul>
-                <li><a href="#">&lt;</a></li>
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&gt;</a></li>
-              </ul>
+			  	{% if announcements.has_previous %}
+                <li><a href="?page={{ announcements.previous_page_number }}">&lt;</a></li>
+                {% endif %}
+				{% for i in announcements.paginator.page_range %}
+				{% if announcements.number == i %}
+				<li><span>{{ i }}</span></li>
+				{% else %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
+				{% endif %}
+				{% endfor %}
+				{% if announcements.has_next %}
+                <li><a href="?page={{ announcements.next_page_number }}">&gt;</a></li>
+              	{% endif %}
+			  </ul>
             </div>
           </div>
         </div>
+		{% endif %}
     	</div>
+		
     </section>
 
 {% endblock content%}
