--- a/templates/agent.html
+++ b/templates/agent.html
@@ -28,7 +28,7 @@
 				{% for agent in agents %}
         		<div class="agent">
     					<div class="img">
-		    				<img src="{{ agent.image.url }}" class="img-fluid" alt="Colorlib Template">
+		    				<img src="{{ agent.agent_image.url }}" class="img-fluid" alt="Colorlib Template">
 	    				</div>
 	    				<div class="desc">
 	    					<h3><a href="properties.html">{{ agent.name }}</a></h3>
