--- a/templates/properties.html
+++ b/templates/properties.html
@@ -19,77 +19,79 @@
 	    	<div class="row">
 					<div class="col-md-12">
 						<div class="search-wrap-1 ftco-animate p-4">
-							<form action="#" class="search-property-1">
-		        		<div class="row">
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Keyword</label>
-		          				<div class="form-field">
-		          					<div class="icon"><span class="fa fa-search"></span></div>
-				                <input type="text" class="form-control" placeholder="Enter Keyword">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Property Type</label>
-		        					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                        <option value="">Residence</option>
-		                        <option value="">Offices</option>
-		                        <option value="">Commercial</option>
-		                      </select>
-		                    </div>
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Location</label>
-		          				<div class="form-field">
-		          					<div class="icon"><span class="fa fa-search"></span></div>
-				                <input type="text" class="form-control" placeholder="Location">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Price Limit</label>
-		        					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                        <option value="">$5,000</option>
-		                        <option value="">$10,000</option>
-		                        <option value="">$50,000</option>
-		                        <option value="">$100,000</option>
-		                        <option value="">$200,000</option>
-		                        <option value="">$300,000</option>
-		                        <option value="">$400,000</option>
-		                        <option value="">$500,000</option>
-		                        <option value="">$600,000</option>
-		                        <option value="">$700,000</option>
-		                        <option value="">$800,000</option>
-		                        <option value="">$900,000</option>
-		                        <option value="">$1,000,000</option>
-		                        <option value="">$2,000,000</option>
-		                      </select>
-		                    </div>
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-self-end">
-		        				<div class="form-group">
-		        					<div class="form-field">
-				                <input type="submit" value="Search" class="form-control btn btn-primary">
-				              </div>
-			              </div>
-		        			</div>
+							<form action="search" class="search-property-1" method="GET">
+								
+								<div class="row">
+									<div class="col-lg align-items-end">
+										<div class="form-group">
+											<label for="#">Keyword</label>
+										<div class="form-field">
+											<div class="icon"><span class="fa fa-search"></span></div>
+										<input type="text" name='title'class="form-control" placeholder="Enter Keyword">
+									</div>
+								</div>
+									</div>
+									<div class="col-lg align-items-end">
+										<div class="form-group">
+											<label for="#">Property Type</label>
+											<div class="form-field">
+											<div class="select-wrap">
+									<div class="icon"><span class="fa fa-chevron-down"></span></div>
+									<select name="type" id="type" class="form-control">
+										{% for type in types %}
+											<option>{{ type.name }}</option>
+										{% endfor %}
+									</select>
+									<input type="hidden" name="type_id" id="turi_id">
+									</div>
+									</div>
+								</div>
+									</div>
+									<div class="col-lg align-items-end">
+										<div class="form-group">
+											<label for="#">Location</label>
+										<div class="form-field">
+											<div class="icon"><span class="fa fa-search"></span></div>
+										<input type="text" class="form-control" placeholder="Location">
+									</div>
+								</div>
+									</div>
+									<div class="col-lg align-items-end">
+										<div class="form-group">
+											<label for="#">Price Limit</label>
+											<div class="form-field">
+											<div class="select-wrap">
+									<div class="icon"><span class="fa fa-chevron-down"></span></div>
+									<select name="" id="" class="form-control">
+										<option value="">$5,000</option>
+										<option value="">$10,000</option>
+										<option value="">$50,000</option>
+										<option value="">$100,000</option>
+										<option value="">$200,000</option>
+										<option value="">$300,000</option>
+										<option value="">$400,000</option>
+										<option value="">$500,000</option>
+										<option value="">$600,000</option>
+										<option value="">$700,000</option>
+										<option value="">$800,000</option>
+										<option value="">$900,000</option>
+										<option value="">$1,000,000</option>
+										<option value="">$2,000,000</option>
+									</select>
+									</div>
+									</div>
+								</div>
+									</div>
+									<div class="col-lg align-self-end">
+										<div class="form-group">
+											<div class="form-field">
+										<input type="submit" value="Search" class="form-control btn btn-primary">
+									</div>
+								</div>
+									</div>
+								</div>
+		        			</form>
 		        		</div>
-		        	</form>
-		        </div>
 					</div>
 	    	</div>
 	    </div>
@@ -110,7 +112,7 @@
         		<div class="property-wrap ftco-animate">
 				
 					{% if announcement.image %}
-						<a href="{% url 'properties-single' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
+						<a href="{% url 'properties-single announcements.pk' %}" class="img" style="background-image: url('{{ announcement.image.url }}');">
 					{% endif %}
 					<div class="rent-sale">
 					{% if announcement.status.id == 1 %}
@@ -302,7 +304,7 @@
                 {% endif %}
 				{% for i in announcements.paginator.page_range %}
 				{% if announcements.number == i %}
-				<li><span>{{ i }}</span></li>
+				<li class="active"><span>{{ i }}</span></li>
 				{% else %}
                 <li><a href="?page={{ i }}">{{ i }}</a></li>
 				{% endif %}
@@ -320,3 +322,14 @@
     </section>
 
 {% endblock content%}
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+	<script>
+		$(document).ready(function(){
+				var tuman_id = [], selectedRegionIndex = 0;
+				var t = '{{ districts|safe }}';
+				var tumanlar = JSON.parse(t);
+				$("#type_id").change(function(){
+                selectedTypeIndex = $("#type_id option:selected").index();
+				$("#turi_id").val(selectedTypeIndex);
+            });
+	</script>
