--- a/templates/properties-single.html
+++ b/templates/properties-single.html
@@ -15,18 +15,20 @@
       </div>
     </section>
     <section class="ftco-section ftco-property-details">
+	{% for announcement in announcements %}
       <div class="container">
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="property-details">
-      				<div class="img" style="background-image: url({% static 'images/photo_2019-07-25_23-36-06.jpg' %});">
+      				<div class="img" style="background-image: url({{ announcement.image.url }});">
       					<a href="https://www.youtube.com/watch?v=_ZxLUO9POVglist=RD_ZxLUO9POVg" class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 			          	<span class="fa fa-play"></span>
 			          </a>
       				</div>
+					  
       				<div class="text">
-      					<span class="subheading">Oakland</span>
-      					<h2>The Blue Sky Home</h2>
+      					<span class="subheading">{{ announcement.region }}</span>
+      					<h2>{{ announcement.title }}</h2>
       				</div>
       			</div>
       		</div>
@@ -38,13 +40,13 @@
 							  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 
 							    <li class="nav-item">
-							      <a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Features</a>
+							      <a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-expanded="true">Qulayliklari</a>
 							    </li>
 							    <li class="nav-item">
-							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Description</a>
+							      <a class="nav-link" id="pills-manufacturer-tab" data-toggle="pill" href="#pills-manufacturer" role="tab" aria-controls="pills-manufacturer" aria-expanded="true">Umumiy tavsif</a>
 							    </li>
 							    <li class="nav-item">
-							      <a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Review</a>
+							      <a class="nav-link" id="pills-review-tab" data-toggle="pill" href="#pills-review" role="tab" aria-controls="pills-review" aria-expanded="true">Izoh</a>
 							    </li>
 							  </ul>
 							</div>
@@ -55,36 +57,25 @@
 						    		<div class="col-md-4">
 						    			<ul class="features">
 						    				<li class="check"><span class="fa fa-check-circle"></span>Lot Area: 1,250 SQ FT</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Bed Rooms: 4</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Bath Rooms: 4</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Luggage</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Garage: 2</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>Type: {{ announcement.type }}</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>Status: {{ announcement.status }}</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>Phone: {{ announcement.phone }}</li>
+											<li class="check"><span class="fa fa-check-circle"></span>User: {{ user.first_name }} {{ user.last_name }}</li>
 						    			</ul>
 						    		</div>
 						    		<div class="col-md-4">
 						    			<ul class="features">
-						    				<li class="check"><span class="fa fa-check-circle"></span>Floor Area: 1,300 SQ FT</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Year Build:: 2019</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Water</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Stories: 2</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Roofing: New</li>
-						    			</ul>
-						    		</div>
-						    		<div class="col-md-4">
-						    			<ul class="features">
-						    				<li class="check"><span class="fa fa-check-circle"></span>Floor Area: 1,300 SQ FT</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Year Build:: 2019</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Water</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Stories: 2</li>
-						    				<li class="check"><span class="fa fa-check-circle"></span>Roofing: New</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>Region: {{ announcement.region }}</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>District: {{ announcement.district }}</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>Price: {{ announcement.price }}</li>
+						    				<li class="check"><span class="fa fa-check-circle"></span>View: {{ announcement.view }}</li>
 						    			</ul>
 						    		</div>
 						    	</div>
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-manufacturer" role="tabpanel" aria-labelledby="pills-manufacturer-tab">
-						      <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-									<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						      {{ announcement.content }}
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
@@ -221,6 +212,7 @@
 		      </div>
 				</div>
       </div>
+	  {% endfor %}
     </section>
 
 {% endblock content%}
